--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- Szükséges meta elemek -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Csudijó Étt</title>
+    <title>Csudijó Étterem</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
